--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<!-- ICS2O-Assignment4-HTML -->
+<html lang="en-ca">
   <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Pizza Order, with JavaScript" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Assignment 4" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Jaejun Lee" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <link rel="canonical" href="https://github.com/jaejun-lee06/ICS2O-Assignment-04" />
+    <link rel="manifest" href="/ICS2O-Assignment-04/manifest.webmanifest" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-green.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <title>Pizza Order, with JavaScript</title>
   </head>
   <body>
@@ -27,47 +30,46 @@
       <main class="mdl-layout__content">
         <table class="mdl-data-table mdl-js-data-table" id="pizza-size-table">
         <h5>Which pizza would you like to order?</h5>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largePizza">
-          <input type="radio" id="largePizza" class="mdl-radio__button" name="options" value="1" checked>
-          <span class="mdl-radio__label">Large Pizza</span>
+        <!--Radio buttons for pizza size-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
+          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
+          <span class="mdl-radio__label">Large Pizza: $6.00</span>
         </label>
-        <br>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="extraLargePizza">
-          <input type="radio" id="extraLargePizza" class="mdl-radio__button" name="options" value="1" checked>
-          <span class="mdl-radio__label">Extra Large Pizza</span>
-        </label>
-        <br>
-        <h5>How many toppings would you like to order?</h5>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="extraLagreSize">
+          <input type="radio" id="extraLagreSize" class="mdl-radio__button" name="pizza" value="extraLagreSize">
+          <span class="mdl-radio__label">Extra Large Pizza: $10.00</span>
+        </label>   
+      </tr>
+    </table>
+          <h5>How many toppings would you like to order?</h5>
+        <!--Radio buttons for pizza toppings-->
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="topping1">
-          <input type="radio" id="topping1" class="mdl-radio__button" name="options2" value="1" checked>
-          <span class="mdl-radio__label">One Topping</span>
+          <input type="radio" id="topping1" class="mdl-radio__button" name="topping" value="topping1">
+          <span class="mdl-radio__label">1 topping ($1.00)</span>
         </label>
-        <br>
+        <p></p>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="topping2">
-          <input type="radio" id="topping2" class="mdl-radio__button" name="options2" value="1" checked>
-          <span class="mdl-radio__label">Two Toppings</span>
-        </label>
-        <br>
+          <input type="radio" id="topping2" class="mdl-radio__button" name="topping" value="topping2">
+          <span class="mdl-radio__label">2 toppings ($1.75)</span>
+        </label>   
+        <p></p>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="topping3">
-          <input type="radio" id="topping3" class="mdl-radio__button" name="options2" value="1" checked>
-          <span class="mdl-radio__label">Three Toppings</span>
-        </label>
-        <br>
+          <input type="radio" id="topping3" class="mdl-radio__button" name="topping" value="topping3">
+          <span class="mdl-radio__label">3 toppings ($2.50)</span>
+        </label>  
+        <p></p>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="topping4">
-          <input type="radio" id="topping4" class="mdl-radio__button" name="options2" value="1" checked>
-          <span class="mdl-radio__label">Four Toppings</span>
-        </label>
-        <br>
-        <br>
-        <!-- Raised button with ripple -->
-        <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="myButtonClicked()">
-          Order
-        </button>
-        <br>
-        <br>
-        <div id="answers"></div>
-      </main>
-    </div>
+          <input type="radio" id="topping4" class="mdl-radio__button" name="topping" value="topping4">
+          <span class="mdl-radio__label">4 toppings ($3.35)</span>
+        </label> 
+      </tr>
+    </table>
+    <p></p>
+    <!-- Raised button with ripple -->
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
+     Order
+    </button>
+    <div id="order"></div>
   </body>
 </html>
