--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
           <input type="radio" id="extraLagreSize" class="mdl-radio__button" name="pizza" value="extraLagreSize">
           <span class="mdl-radio__label">Extra Large Pizza: $10.00</span>
         </label>   
-      </tr>
     </table>
           <h5>How many toppings would you like to order?</h5>
         <!--Radio buttons for pizza toppings-->
@@ -63,13 +62,13 @@
           <input type="radio" id="topping4" class="mdl-radio__button" name="topping" value="topping4">
           <span class="mdl-radio__label">4 toppings ($3.35)</span>
         </label> 
-      </tr>
-    </table>
     <p></p>
     <!-- Raised button with ripple -->
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
      Order
     </button>
     <div id="order"></div>
+      </main>
+    </div>
   </body>
 </html>
